[package]
name = "nvtt_rs"
version = "0.6.0"
authors = ["George Burton <burtonageo@gmail.com>"]
license = "MIT/Apache-2.0"
description = "High-level bindings to the nvtt library"
repository = "https://github.com/burtonageo/nvtt_rs"
readme = "./Readme.md"
keywords = ["compression", "texture", "tools", "nvidia", "image"]
edition = "2018"
exclude = ["/example_data/**"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1.10"

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.image]
version = "0.23"
default-features = false
optional = true

[dependencies.maybe-owned]
version = "0.3"
optional = true

[dependencies.safe-transmute]
version = "0.11.0"
optional = true

[dependencies.nvtt_sys]
version = "0.3"

[features]
nvtt_image_integration = ["image", "maybe-owned", "safe-transmute"]