[package]
name = "nvtt_sys"
version = "0.1.0"
authors = ["George Burton <burtonageo@gmail.com>"]
license = "MIT/Apache"
description = "Low-level bindings to the nvtt library"
keywords = ["compression", "texture", "tools", "nvidia", "image"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
