[package]
name = "nvtt_sys"
version = "0.1.0"
authors = ["George Burton <burtonageo@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Low-level bindings to the nvtt library"
repository = "https://github.com/burtonage/nvtt_rs"
readme = "./Readme.md"
keywords = ["compression", "texture", "tools", "nvidia", "image"]
edition = "2018"
build = "./build.rs"
exclude = ["./nvidia-texture-tools/data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libc]
version = "0.2"
default-features = false

[build-dependencies]
cfg-if = "0.1.9"

[build-dependencies.bindgen]
version = "0.51.0"
default-features = false

[target.'cfg(target_os = "windows")'.build-dependencies]
semver = "0.9"
vswhere = "0.1"

[target.'cfg(not(target_os = "windows"))'.build-dependencies]
cmake = "0.1"

