[package]
name = "nvtt_sys"
version = "0.3.0"
authors = ["George Burton <burtonageo@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Low-level bindings to the nvtt library"
repository = "https://github.com/burtonageo/nvtt_rs"
readme = "./Readme.md"
keywords = ["compression", "texture", "tools", "nvidia", "image"]
edition = "2018"
build = "./build.rs"
exclude = [
    "/nvidia-texture-tools/data/**",
    "/nvidia-texture-tools/project/vc8/**",
    "/nvidia-texture-tools/project/vc9/**",
    "/nvidia-texture-tools/project/vc10/**",
    "/nvidia-texture-tools/project/vc12/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libc]
version = "0.2"
default-features = false

[build-dependencies]
cfg-if = "1"

[build-dependencies.bindgen]
version = "0.54.0"
default-features = false

[target.'cfg(target_os = "windows")'.build-dependencies]
semver = "0.10"
vswhere = "0.1"

[target.'cfg(not(target_os = "windows"))'.build-dependencies]
cmake = "0.1"

